tests/dev_server/errors/stories/js_module_throw_string/main.js
// eslint-disable-next-line no-throw-literal
throw "hello"
